media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.sidecar: regex:^(?!amd64|arm32|preview).*$ # Does not start with amd64, arm32, preview. https://hub.docker.com/r/linuxserver/radarr/tags

spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      release: radarr
  template:
    metadata:
      labels:
        app: radarr
        release: radarr
    spec:
      volumes:
      - name: radarr-downloads
        persistentVolumeClaim:
          claimName: nfs-downloads
      - name: radarr-movies
        persistentVolumeClaim:
          claimName: nfs-movies
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      containers:
      - name: radarr
        image: "linuxserver/radarr:arm64v8-3.0.0.3700-ls21"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: radarr-config
          subPath: radarr
        - mountPath: /nfs-downloads
          name: radarr-downloads
        - mountPath: /nfs-movies
          name: radarr-movies
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 0.5
            memory: 512Mi
