media/radarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.nginx: nginx
    kubernetes.io/tls-acme: "true"
  name: radarr
  namespace: media
spec:
  rules:
  - host: radarr.k3s.sharpe.wales
    http:
      paths:
      - backend:
          serviceName: radarr
          servicePort: http
        path: /
  tls:
  - hosts:
    - radarr.k3s.sharpe.wales
    secretName: radarr-production-tls
